[gd_scene load_steps=4 format=3 uid="uid://dac8i8gpyjnxs"]

[ext_resource type="Script" uid="uid://ddnb6dbbvm884" path="res://game/gameplay_scene/game_resources/resource_displayer.gd" id="1_8gynb"]
[ext_resource type="FontFile" uid="uid://cudqsbu5ahhbr" path="res://assets/fonts/Kenney Future.ttf" id="2_0n7h4"]
[ext_resource type="Texture2D" uid="uid://uyqwu86vlr6g" path="res://assets/images/ui/button_rectangle_border.png" id="2_ndaem"]

[node name="ResourcesManager" type="Node2D"]
script = ExtResource("1_8gynb")

[node name="ButtonRectangleBorder" type="Sprite2D" parent="."]
position = Vector2(-3.8146973e-06, -9.536743e-07)
scale = Vector2(1.7018546, 1.0449449)
texture = ExtResource("2_ndaem")
centered = false

[node name="MoneyLabel" type="Label" parent="."]
offset_left = 45.0
offset_top = 11.0
offset_right = 60789.344
offset_bottom = 6779.0
scale = Vector2(0.0070485533, 0.006953758)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0n7h4")
theme_override_font_sizes/font_size = 6000
text = "Money: 300"

[node name="LivesLabel" type="Label" parent="."]
offset_left = 45.0
offset_top = 44.0
offset_right = 38602.0
offset_bottom = 6812.0
scale = Vector2(0.007037615, 0.0069429665)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0n7h4")
theme_override_font_sizes/font_size = 6000
text = "Lives: 100"

[node name="WavesLabel" type="Label" parent="."]
offset_left = 45.710167
offset_top = 77.0
offset_right = 40852.71
offset_bottom = 6845.0
scale = Vector2(0.007142424, 0.0070463656)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0n7h4")
theme_override_font_sizes/font_size = 6000
text = "Wave: 1/50"
